added a sneaky thing hehe

--- a/404.md
+++ b/404.md
@@ -3,7 +3,12 @@ layout: error
 permalink: /404
 permalink_name: 404
 title: 404 - PAGE NOT FOUND
----
 
+
+detail_image: encrypted_image.jpg
+---
 <h1>404</h1>
 PAGE NOT FOUND
+![Image](encrypted_image.jpg)
+VvC1fIt13xKppWeiVIkN7_GrOAidx0jlXlsjnwlDg7U=
+AES in CBC
