Get rid of lorem ipsum on events page
I commented out the sample markdown that way we have it as a reference

--- a/404.md
+++ b/404.md
@@ -11,4 +11,4 @@ detail_image: encrypted_image.jpg
 PAGE NOT FOUND
 ![Image](encrypted_image.jpg)
 VvC1fIt13xKppWeiVIkN7_GrOAidx0jlXlsjnwlDg7U=
-AES in CBC
+Fernet
